Added the custon domains  index.html

--- a/index.html
+++ b/index.html
@@ -541,7 +541,8 @@
 					<ul class="site-contact-details">
 						<li>
 							<span class="text-uppercase">Email</span>
-							sanatanmishrasai@gmail.com
+							me@sanatanmishra.com,<be>
+							admin@sanatanmishra.com
 						</li>
 						<li>
 							<span class="text-uppercase">Phone</span>
