Removed the stupid Coma

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 					<ul class="site-contact-details">
 						<li>
 							<span class="text-uppercase">Email</span>
-							me@sanatanmishra.com,<be>
+							me@sanatanmishra.com<be>
 							admin@sanatanmishra.com
 						</li>
 						<li>
