Remove the Admin Email

--- a/index.html
+++ b/index.html
@@ -541,8 +541,7 @@
 					<ul class="site-contact-details">
 						<li>
 							<span class="text-uppercase">Email</span>
-							me@sanatanmishra.com<be>
-							admin@sanatanmishra.com
+							me@sanatanmishra.com
 						</li>
 						<li>
 							<span class="text-uppercase">Phone</span>
