--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   gtag('config', 'G-8PWK4FBHKC');
 </script>
 
-	<title>Rezume Free Template by Colorlib</title>
+	<title>Sanatan Mishra</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/animate.css">
