--- a/index.html
+++ b/index.html
@@ -578,11 +578,9 @@
 			<div class="row mb-5">
 				<div class="col-md-12 text-center">
 					<p>
-						<a href="#" class="social-item"><span class="icon-facebook2"></span></a>
 						<a href="#" class="social-item"><span class="icon-twitter"></span></a>
-						<a href="#" class="social-item"><span class="icon-instagram2"></span></a>
-						<a href="#" class="social-item"><span class="icon-linkedin2"></span></a>
-						<a href="#" class="social-item"><span class="icon-vimeo"></span></a>
+						<a href="https://www.instagram.com/sa_m.exe/" class="social-item"><span class="icon-instagram2"></span></a>
+						<a href="https://www.linkedin.com/in/sanatan-mishra-334a84282/" class="social-item"><span class="icon-linkedin2"></span></a>
 					</p>
 				</div>
 			</div>
