edited the photoes

--- a/index.html
+++ b/index.html
@@ -132,6 +132,24 @@
 							<div class="cat">Digital Art</div>
 						</div>                                         
 					</div>                            
+					<div class="single-portfolio col-sm-4 all mockup">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="images/bottel p1.png" alt="">
+							</div>
+							<a href="images/p2.jpg" class="img-pop-up">  
+								<div class="middle">
+									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
+								</div>
+							</a>                                  
+						</div>
+						<div class="p-inner">
+							<h4>porcelain platter Blender</h4>
+							<div class="cat">Digital Art</div>
+						</div>                                         
+					</div>
+					
 					<div class="single-portfolio col-sm-4 all packaging">
 						<div class="relative">
 							<div class="thumb">
@@ -150,6 +168,7 @@
 							<div class="cat">Logo Design</div>
 						</div>
 					</div>
+					
 					<div class="single-portfolio col-sm-4 all packaging">
 						<div class="relative">
 							<div class="thumb">
@@ -167,6 +186,7 @@
 							<div class="cat">Packaging</div>
 						</div>
 					</div>
+					<!--Typography
 					<div class="single-portfolio col-sm-4 all typography">
 						<div class="relative">
 							<div class="thumb">
@@ -184,6 +204,7 @@
 							<div class="cat">Typography</div>
 						</div>
 					</div>
+					-->
 					<div class="single-portfolio col-sm-4 all photography">
 						<div class="relative">
 							<div class="thumb">
