completed the image problem

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/bottel p1.png" alt="">
+								<img class="image img-fluid" src="images/bottle p1.png" alt="">
 							</div>
 							<a href="images/p2.jpg" class="img-pop-up">  
 								<div class="middle">
