added meta title and description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 
+	<meta name="title" content="Sanatan Mishra | Logo Design & Website Creation Portfolio">
+	<meta name="description" content=" Explore the portfolio of Sanatan Mishra on sanatanmishra.com. Specializing in logo design and website creation, Sanatan showcases his latest projects and offers professional services to elevate your brand and online presence.">
 
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8PWK4FBHKC"></script>
