added url for sudoteach.online

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						</div>
 						<div class="p-inner">
 							<h3>Website</h3>
-							<div class="cat">Resume Website</div>
+							<div class="cat"><a href="https://sudoteach.online/">sudoteach.online/</a></div>
 						</div>
 					</div>
 
@@ -631,9 +631,9 @@
 				<div class="col-md-12 text-center">
 					<p>
 						<!--<a href="#" class="social-item"><span class="icon-twitter"></span></a>-->
-						<a href="https://www.instagram.com/sa_m.exe/" class="social-item"><span
+						<a href="https://www.instagram.com/sa_m.exe/" class="social-item" target="_blank"><span
 								class="icon-instagram2"></span></a>
-						<a href="https://www.linkedin.com/in/sanatan-mishra-334a84282/" class="social-item"><span
+						<a href="https://www.linkedin.com/in/sanatan-mishra-334a84282/" class="social-item" target="_blank"><span
 								class="icon-linkedin2"></span></a>
 					</p>
 				</div>
