--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						</div>
 						<div class="p-inner">
 							<h3>Website</h3>
-							<div class="cat"><a href="https://sudoteach.online/">sudoteach.online/</a></div>
+							<div class="cat"><a href="https://sudoteach.online/">sudoteach.online</a></div>
 						</div>
 					</div>
 
