--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<a href="https://sudoteach.online">
+								<a href="https://sudoteach.online" target="_blank">
 									<img class="image img-fluid" src="images/p7.png" alt="image of paper flowers">
 								</a>
 							</div>
-							<a href="https://sudoteach.online" class="img-pop-up">
+							<a href="https://sudoteach.online" target="_blank" class="img-pop-up">
 							</a>
 						</div>
 						<div class="p-inner">
 							<h3>Website</h3>
-							<div class="cat"><a href="https://sudoteach.online/">sudoteach.online</a></div>
+							<div class="cat"><a href="https://sudoteach.online/" target="_blank">sudoteach.online</a></div>
 						</div>
 					</div>
 
