tryed to add icon

--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html lang="en">
 
 <head>
-
-	<meta name="title" content="Sanatan Mishra | Logo Design & Website Creation Portfolio">
-	<meta name="description" content=" Explore the portfolio of Sanatan Mishra on sanatanmishra.com. Specializing in logo design and website creation, Sanatan showcases his latest projects and offers professional services to elevate your brand and online presence.">
-
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8PWK4FBHKC"></script>
 	<script>
@@ -17,6 +13,9 @@
 	</script>
 
 	<title>Sanatan Mishra</title>
+	<link rel="icon" type="image/png" href="images/icon.png">
+	<meta name="title" content="Sanatan Mishra | Logo Design & Website Creation Portfolio">
+	<meta name="description" content=" Explore the portfolio of Sanatan Mishra on sanatanmishra.com. Specializing in logo design and website creation, Sanatan showcases his latest projects and offers professional services to elevate your brand and online presence.">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/animate.css">
