--- a/index.html
+++ b/index.html
@@ -570,19 +570,12 @@
 				</div>
 
 
-
-				<form action="https://formsubmit.co/your@email.com" method="POST">
-					<input type="text" name="name" required>
-					<input type="email" name="email" required>
-					<button type="submit">Send</button>
-			   </form>
-
-
-
-
-			   
 				<div class="col-md-7 mb-5 mb-md-0">
 					<form action="https://formsubmit.co/sanatanmishrasai@gmail.com" class="site-form" method="post">
+						<input type="hidden" name="_cc" value="me@sanatanmishra.com">
+						<input type="hidden" name="_captcha" value="false">
+						<input type="hidden" name="_subject" value="Email for sanatanmishra.com">
+
 						<h3 class="mb-5">Get In Touch</h3>
 						<div class="form-group">
 							<input type="text" name="name" class="form-control px-3 py-4" placeholder="Your Name" required>
