Added the figma design

--- a/index.html
+++ b/index.html
@@ -127,6 +127,21 @@
 							<div class="cat"><a href="https://sudoteach.online/" target="_blank">sudoteach.online</a></div>
 						</div>
 					</div>
+					<div class="single-portfolio col-sm-4 all photography">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<a href="images/a11.jpg"><img class="image img-fluid" src="images/a1.jpg" alt="image of paper flowers"></a>
+							</div>
+							<a href="images/a11.jpg" target="_blank" class="img-pop-up">
+							</a>
+						</div>
+						<div class="p-inner">
+							<h3>Figma Design</h3>
+							<div class="cat">Web Design</div>
+						</div>
+					</div>
+
 
 
 					<div class="single-portfolio col-sm-4 all mockup">
@@ -147,24 +162,7 @@
 							<div class="cat">Digital Art</div>
 						</div>
 					</div>
-					<div class="single-portfolio col-sm-4 all mockup">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p2.jpg" alt="3d porcelain plate">
-							</div>
-							<a href="images/p2.jpg" class="img-pop-up">
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt="">
-									</div>
-								</div>
-							</a>
-						</div>
-						<div class="p-inner">
-							<h4>porcelain platter Blender</h4>
-							<div class="cat">Digital Art</div>
-						</div>
-					</div>
+
 					<div class="single-portfolio col-sm-4 all mockup">
 						<div class="relative">
 							<div class="thumb">
